# ititviti_dev

./: .gitignore  CMakeLists.txt  README.md
gtest/: CMakeLists.txt
gtest/decoder_test/: CMakeLists.txt  Decoder_test.cpp
gtest/encoder_test/: CMakeLists.txt  ClientSocketMock.cpp  Encoder_test.cpp  Encoder_test_main.cpp
gtest/test/: CMakeLists.txt  Encoder_test.cpp
include/: ClientSocketImpl.h  Decoder.h  EchoServer.h  Encoder.h  IClientSocket.h  IServerSocket.h  ISocket.h  MessageInfo.cpp  MessageInfo.h  RTClient.h  RTPeer.h  SockApi.h
libbar/: CMakeLists.txt  ClientSocketImpl.h  Decoder.h  Encoder.cpp  IServerSocket.h  ISocket.h
librtclient/: CMakeLists.txt  RTClient.cpp  RTClient.h
librtserver/: CMakeLists.txt  EchoServer.cpp  EchoServer.h  Inet_pton.cpp  Wraplib.cpp
libsockutil/: CMakeLists.txt  ClientSocketImpl.h  Encoder.h  ErrorUtil.h  GenericSocket.h  IClientSocket.h  IOUtil.h  IServerSocket.h  ServerSocketImpl.h  SocketUtil.h
main/: CMakeLists.txt  ClientMain.cpp  ServerMain.cpp
src/: CMakeLists.txt  ClientMain.cpp  Decoder.cpp  EchoServer.cpp  Encoder.cpp  ErrorUtil.cpp  Main.cpp  RTClient.cpp  RTPeer.cpp  Readn.c  Readn.cpp  SockApiImpl.cpp  Wraplib.cpp  Writen.cpp
test/: CMakeLists.txt
test/decoder_test/: CMakeLists.txt  Decoder_test.cpp  Decoder_test_main.cpp  testdecoder.h
test/encoder_test/: CMakeLists.txt  ClientSocketMock.cpp  Encoder_test.cpp  testencoder.cpp  testencoder.h
test/testclient/: CMakeLists.txt  mockclient_sock.h  testclient.cpp  testserver.h
test/testfoo/: CMakeLists.txt  mockclient_sock.h  testfoo.cpp  testfoo.h
test/testserver/: CMakeLists.txt  mockserver_sock.h  testserver.cpp  testserver.h
